update img and icon

--- a/css/common/header.css
+++ b/css/common/header.css
@@ -35,7 +35,8 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #E9EBEE;
+    background-image: url("../../content/icon/avatar-default.png");
+    background-size: contain;
 }
 
 .header-account .account-name {
@@ -43,7 +44,7 @@
     margin: 0px 16px 0px 16px;
 }
 .header-account .account-more {
-    background-image: url("../../content/icon/three-dot.png");
+    background-image: url("../../content/icon/option.png");
     width: 20px;
     height: 20px;
     background-size: contain;
