--- a/css/common/content.css
+++ b/css/common/content.css
@@ -37,9 +37,36 @@
     padding: 0px 24px 0px 24px;
 }
 
+.content .page-title .add-button button .button-box {
+    display: flex;
+    align-items: center;
+}
+
+
 .content .page-title .add-button button:hover {
     background-color: #2FBE8E;
 }
+
+.content .page-title .reload-button {
+    float: right;
+    margin-right: 16px;
+    border-radius: 4px;
+    border: 1px solid #E5E5E5;
+}
+
+.content .page-title .reload-button button {
+    border-radius: 4px;
+    border: 1px solid #E5E5E5;
+    background-color: #fff;
+    height: 40px;
+    width: 40px;
+}
+
+.content .page-title .reload-button button:hover {
+    background-color: #e5e5e5;
+    cursor: pointer;
+}
+
 
 .content .filter-bar {
     padding: 16px;
@@ -51,7 +78,7 @@
 }
 
 .content .filter-bar .search-input input {
-    background-image: url("../../content/icon/search-icon.png");
+    background-image: url("../../content/icon/search.png");
     background-size: 16px 16px;
     background-position: 16px;
     background-repeat: no-repeat;
@@ -83,7 +110,6 @@
 .content .filter-bar .filter-input select:focus {
     border: 1px solid #019160;
 }
-
 .grid {
     width: 100%;
     height: 200px;
@@ -92,4 +118,19 @@
 table th, td {
     border-bottom: 1px solid #bbbbbb;
     padding: 10px 16px;
+    text-align: left;
+}
+table tr:nth-child(even) {
+    background-color: #e5e5e5;
+}
+
+.paging-bar {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    left: 0;
+    background: #019160;
+    display: flex;
+    justify-content: space-between;
 }
