--- a/css/common/content.css
+++ b/css/common/content.css
@@ -1,5 +1,5 @@
 .content {
-    background-color:#fff;
+    background-color: #fff;
     width: calc(100% - 221px);
     height: calc(100vh - 61px);
     position: absolute;
@@ -12,7 +12,7 @@
     position: relative;
 }
 
-.content .page-title .title-text{
+.content .page-title .title-text {
     font-weight: bold;
     font-size: 20px;
     margin-left: 16px;
@@ -42,7 +42,6 @@
     align-items: center;
 }
 
-
 .content .page-title .add-button button:hover {
     background-color: #2FBE8E;
 }
@@ -66,7 +65,6 @@
     background-color: #e5e5e5;
     cursor: pointer;
 }
-
 
 .content .filter-bar {
     padding: 16px;
@@ -110,6 +108,7 @@
 .content .filter-bar .filter-input select:focus {
     border: 1px solid #019160;
 }
+
 .grid {
     width: 100%;
     height: 200px;
@@ -120,6 +119,7 @@ table th, td {
     padding: 10px 16px;
     text-align: left;
 }
+
 table tr:nth-child(even) {
     background-color: #e5e5e5;
 }
@@ -130,7 +130,70 @@ table tr:nth-child(even) {
     height: 60px;
     bottom: 0;
     left: 0;
-    background: #019160;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.paging-bar .paging-left {
+    margin-left: 16px;
+}
+
+.paging-bar .paging-right {
+    margin-right: 16px;
+}
+
+.paging-bar .paging-center {
+    display: flex;
+    align-items: center;
+}
+
+.paging-bar .paging-center .pagination {
+    display: flex;
+    justify-content: center;
+}
+
+.paging-bar .paging-center .pagination-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #bbbbbb;
+    border-radius: 50%;
+    margin: 0px 5px;
+}
+
+.paging-bar .paging-center .active{
+    background-color: #019160;
+    color: #fff;
+}
+
+.paging-bar .paging-center .btn-firstpage {
+    width: 20px;
+    height: 20px;
+    background-image: url("/content/icon/btn-firstpage.svg");
+    background-size: cover;
+    margin-right:10px ;
+}
+.paging-bar .paging-center .btn-prev-page {
+    width: 20px;
+    height: 20px;
+    background-image: url("/content/icon/btn-prev-page.svg");
+    background-size: cover;
+    margin: 0px 15px;
+}
+.paging-bar .paging-center .btn-next-page {
+    width: 20px;
+    height: 20px;
+    background-image: url("/content/icon/btn-next-page.svg");
+    background-size: cover;
+    margin: 0px 15px;
+}
+.paging-bar .paging-center .btn-lastpage {
+    width: 20px;
+    height: 20px;
+    background-image: url("/content/icon/btn-lastpage.svg");
+    background-size: cover;
+    margin-left:10px ;
 }
