--- a/css/employee/navbar.css
+++ b/css/employee/navbar.css
@@ -6,21 +6,15 @@
     border-right: 1px solid #E5E5E5;
 }
 
-.navbar .thumb-navbar-content {
-    width: 44px;
-}
-
 .navbar .logo-box, .navbar .logo-site {
     display: flex;
     width: 100%;
     height: 60px;
-   
 }
 
 .navbar .logo-box {
     padding-top: 12px;
     padding-left: 16px;
-
 }
 
 .navbar .logo-box .toogler-icon {
@@ -31,8 +25,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     cursor: pointer;
-
-
 }
 
 .navbar .logo-box .logo-image {
@@ -41,13 +33,16 @@
     background-size: contain;
     width: 100%;
     background-repeat: no-repeat;
-
 }
 
-.navbar .navbar-content {
+.thumb-navbar-content, .navbar-content {
     width: 100%;
 }
-.navbar  .nav-item {
+.thumb-navbar-content {
+    width: 52px;
+}
+
+.navbar .nav-item {
     display: flex;
     height: 44px;
     line-height: 44px;
@@ -58,11 +53,29 @@
     background-color: #e5e5e5;
     color: #000;
     cursor: pointer;
+    position: relative;
+    z-index: 20;
 }
 
-.navbar  .nav-icon {
-    width: 25px;
-    height: 25px;
-    align-self: center;
+.navbar .nav-icon {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 10px;
+    
+}
+
+.navbar .nav-icon img {
+    height: 20px;
+    width: 20px;
+}
+
+.navbar .thumb-navbar-content .nav-item {
+    padding-left: 0;
+    width: 52px;
+}
+.navbar .thumb-navbar-content .nav-icon {
+    width: 52px;
+    margin-right: 0;
 }
